<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/explore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Explore">

    <androidx.cardview.widget.CardView

        android:id="@+id/card_serch"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="44dp"
        app:cardCornerRadius="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/serch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.206"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="5dp"
                android:text="@string/text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.769"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.272" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="278dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/heading"
            android:textColor="#1ADCF1"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_marginTop="115dp"
        android:layout_marginStart="80dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pre_head"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="#1ADCF1"
            android:textStyle="bold"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_marginTop="170dp"
        android:layout_marginStart="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_vie"
            android:layout_width="340dp"
            android:layout_height="340dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/independent_feed" />


    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.coordinatorlayout.widget.CoordinatorLayout>